<resources>
    <string name="app_name">FoodSafe</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_back">Hello, Welcome Back!</string>
    <string name="hint">hint</string>
    <string name="login_via">Login Via</string>
    <string name="login">Login</string>
    <string name="register_via">Register Via</string>
    <string name="facebook">FACEBOOK</string>
    <string name="google">GOOGLE</string>
    <string name="new_register">New to AirBrands?</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="register">Register</string>
    <string name="re_enter_password"> Re Enter Password</string>
    <string name="name">Full Name</string>
    <string name="hi">Hi</string>
    <string name="need_help">Need Help?</string>
    <string name="go_to">Go to</string>
    <string name="change_password">Change Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_empty_email">Email cannot be empty!</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_empty_password">Password cannot be empty!</string>
    <string name="error_empty_confirm_password">Confirm Password cannot be empty!</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="login_activity_forgot_password">Forgot Password?</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="suitability_marks">Suitability Marks</string>
    <string name="accessibility">Accessibility</string>
    <string name="amenity">Amenity</string>
    <string name="activity">Activity</string>
    <string name="visibility">Visibility</string>
    <string name="location">Location &amp; Environment</string>
    <string name="appearance">Appearance</string>
    <string name="suitability">Suitability</string>
    <string name="marks">Re Marks "– " </string>
    <string name="attractive">Attractive</string>
    <string name="beautiful">Beautiful</string>
    <string name="polluted_condition">Polluted condition</string>
    <string name="no_dust">No Dust</string>
    <string name="no_smoke">No Smoke</string>
    <string name="no_adverse_effect">No adverse effect</string>
    <string name="animals">Animals</string>
    <string name="dominant">Dominant</string>
    <string name="other">Other</string>
    <string name="drainage">Drainage</string>
    <string name="no_accumulation">No Accumulation</string>
    <string name="suitable">Suitable</string>
    <string name="next">Next</string>
    <string name="building">Building</string>
    <string name="structure">Structure</string>
    <string name="adequate">Adequate</string>
    <string name="safe">Safe</string>
    <string name="permanent">Permanent</string>
    <string name="light_amp_ventilation"><![CDATA[Light & Ventilation]]></string>
    <string name="no_contamination">No Contamination</string>
    <string name="clean">Clean</string>
    <string name="hazards">Hazards</string>
    <string name="unsafe_structures">Unsafe Structures</string>
    <string name="risk_factors">Risk factors</string>
    <string name="total_marks">Total Marks : </string>
    <string name="ceiling_structure">Ceiling Structure</string>
    <string name="floor_structure">Floor structure</string>
    <string name="contamination">Contamination</string>
    <string name="from_toilets">From Toilets</string>
    <string name="from_garbage">From Garbage</string>
    <string name="from_sanitizers">From Sanitizers</string>
    <string name="from_hazards">From Hazards</string>
    <string name="sanitation">Sanitation</string>
    <string name="appropriate">Appropriate</string>
    <string name="daily">Daily</string>
    <string name="cleaning">Cleaning</string>
    <string name="add_comments_here">Add Comments Here</string>
    <string name="cleanliness">Cleanliness</string>
    <string name="house_keeping">House Keeping</string>
    <string name="pest_control">Pest Control</string>
    <string name="no_rodents">No rodents</string>
    <string name="no_pets">No pets</string>
    <string name="temperature_maintenance">Temperature maintenance</string>
    <string name="frozen">Frozen</string>
    <string name="accurate_thermometers">Accurate Thermometers</string>
    <string name="hygienic">Hygienic</string>
    <string name="sanitized">Sanitized</string>
    <string name="water_supply">Water Supply</string>
    <string name="contamination_toilets_garbage">Contamination(Toilets, Garbage)</string>
    <string name="enough">Enough</string>
    <string name="water_sample_reports">Water Sample Reports</string>
    <string name="bacterial">Bacterial</string>
    <string name="chemical">Chemical</string>
    <string name="waste_management">Waste Management</string>
    <string name="have">Have</string>
    <string name="waste_classification">Waste Classification</string>
    <string name="_3r">3R</string>
    <string name="classified">Classified</string>
    <string name="signs">Signs</string>
    <string name="enough_vents_exhausts">Enough vents, exhausts</string>
    <string name="not_lying_in_vicinity">Not lying in vicinity</string>
    <string name="toilets">Toilets</string>
    <string name="toilet_pit">Toilet Pit</string>
    <string name="drainage_system">Drainage System</string>
    <string name="separated_solid_liquid">Separated (solid, liquid)</string>
    <string name="food_handlers">Food Handlers</string>
    <string name="no_sneezing_coughing">No Sneezing, Coughing</string>
    <string name="no_spitting">No Spitting</string>
    <string name="trimmed_nails">Trimmed Nails</string>
    <string name="uniform">Uniform</string>
    <string name="apron_cap">Apron, cap</string>
    <string name="diseases">Diseases</string>
    <string name="no_contagious_suffering_just_cured">No contagious (suffering, just cured)</string>
    <string name="no_fbd_suffering_just_cured">No FBD (suffering, just cured)</string>
    <string name="health_training_certification">Health/Training certification</string>
    <string name="have_for_handlers">Have For Handlers</string>
    <string name="have_for_owners">Have For Owners</string>
    <string name="separated_kitchen_hand_washing">Separated (kitchen/hand washing</string>
    <string name="with_disinfectants">With Disinfectants</string>
    <string name="suitable_clean_easiness_l">Suitable (clean, easiness)l</string>
    <string name="separated_food_contact_nonfood_contact_surfaces">Separated(food contact/nonfood contact surfaces)</string>
    <string name="sanitation_procedure">Sanitation Procedure</string>
    <string name="empty_crates_cartons_containers">Empty Crates, Cartons, Containers</string>
    <string name="original_container">Original Container</string>
    <string name="labelled">Labelled</string>
    <string name="covered">Covered</string>
    <string name="food_grade_polythene_hdpe_plastic_pp5">Food grade (polythene/HDPE, Plastic/ PP5)</string>
    <string name="no_on_sanitation">No On Sanitation</string>
    <string name="no_on_labelling_rules">No On Labelling Rules</string>
    <string name="violations">Violations</string>
    <string name="food_safety_certifications">Food Safety Certifications</string>
    <string name="workers">Workers</string>
    <string name="billing">Billing</string>
    <string name="receiving">Receiving</string>
    <string name="selling">Selling</string>
    <string name="record_keeping_food_raw_ingredients">Record Keeping( food/raw ingredients)</string>
    <string name="shelves_amp_racksure">Shelves &amp; Racksure</string>
    <string name="hint_password">Password</string>
    <string name="get_started">Get Started</string>
    <string name="required">Required</string>
    <string name="too_short">Password too short, enter minimum 6 characters!</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="password_miss_match">Passwords Miss Match</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="wall_maintenance">Wall Maintenance</string>
    <string name="good">Good</string>
    <string name="inadequate">Inadequate</string>
    <string name="bearly_adequate">Bearly Adequate</string>
    <string name="space">Space</string>
    <string name="food_processing_area">Food Processing Area</string>
    <string name="result">Result</string>
    <string name="final_grade">Final Grade</string>
    <string name="finish">Finish</string>
    <string name="settings">Settings</string>
    <string name="tips">Tips</string>
    <string name="reports">Reports</string>
    <string name="inspection">Inspection</string>
    <string name="back">Back</string>
    <string name="logout">Logout</string>
    <string name="report">Report</string>
    <string name="fifo">FIFO</string>
    <string name="food_storage">Food Storage</string>
    <string name="perishable">Perishable</string>
    <string name="nonperishable">Nonperishable</string>
    <string name="_18_h_from_floor_level">18” H from floor level</string>
    <string name="_9_from_wall">9” from wall</string>
    <string name="refrigeration">Refrigeration</string>
    <string name="proper">Proper</string>
    <string name="storage">Storage</string>
    <string name="separated">Separated</string>
    <string name="fifo_overstock">FIFO (overstock)</string>
    <string name="storage_facilities">Storage facilities</string>
    <string name="personal_hygiene">Personal Hygiene</string>
    <string name="equipment_amp_utensils"><![CDATA[Equipment & utensils]]></string>
    <string name="handling_equipment">Handling Equipment</string>
    <string name="furniture">Furniture</string>
    <string name="proper_maintenance">Proper maintenance</string>
    <string name="chopping_boards">Chopping Boards</string>
    <string name="separated_meat_vegetables">Separated(Meat, Vegetables)</string>
    <string name="separate_clean_unclean">Separate (clean/unclean)</string>
    <string name="chinaware">Chinaware</string>
    <string name="no_cracks">No Cracks</string>
    <string name="packaging_materials_contaminated_substances">Packaging materials/contaminated substances</string>
    <string name="separated_storage">Separated Storage</string>
    <string name="safe_disposal">Safe disposal</string>
    <string name="contaminated_substances">Contaminated substances ( pesticides, cleaning agents)</string>
    <string name="packaging_materials">Packaging materials</string>
    <string name="wash_bins">Wash Bins</string>
    <string name="cleaning_equipment">Cleaning Equipment</string>
    <string name="record_keeping">Record keeping/certification/Information notice</string>
    <string name="signs_display">Signs Display</string>
    <string name="smoking">Smoking</string>
    <string name="owners">Owners</string>
    <string name="handlers">Handlers</string>
    <string name="standards">Quality control/Standards</string>
    <string name="deteriorated_food_storage">Deteriorated food storage</string>
    <string name="quality_of_raw_materials_foods">Quality Of Raw Materials/Foods</string>
    <string name="have_standards">Have Standards</string>
    <string name="optimum_shelf_life">Optimum Shelf Life</string>
    <string name="foods_display">Foods Display</string>
    <string name="water_source">Water Source</string>
    <string name="dustbin_maintenance">Dustbin Maintenance</string>
    <string name="dustbin_with_lids">Dustbin With Lids</string>
</resources>