<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLinearLayoutLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPageIndicatorD"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".settings.SettingsActivity">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_back_setting"
        android:text="@string/back"
        android:background="@drawable/social_google_btn"
        android:layout_gravity="start"
        android:onClick="onBack"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAlignment="center"
        android:layout_marginBottom="50dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_email"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_logout_setting"
        android:text="@string/logout"
        android:layout_marginTop="10dp"
        android:background="@drawable/social_fb_btn"
        android:onClick="onLogout"/>

</LinearLayout>