<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLinearLayoutLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPageIndicatorD"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <ProgressBar
        android:id="@+id/location_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="@dimen/activity_vertical_margin"
        android:layout_height="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/location_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/linears"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location" />
            </LinearLayout>

            <LinearLayout
                style="@style/headers"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/SectionTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient_btn"
                    android:text="@string/suitability" />

                <TextView
                    android:id="@+id/marks_suitability"
                    style="@style/edit_texts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="60dp"
                    android:gravity="end"
                    android:paddingTop="10dp"
                    android:text="@string/marks" />
            </LinearLayout>

            <LinearLayout
                style="@style/linears"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/Suitability_amenity"
                    style="@style/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amenity" />

                <CheckBox
                    android:id="@+id/Suitability_accessibility"
                    style="@style/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/accessibility" />


                <CheckBox
                    android:id="@+id/Suitability_activity"
                    style="@style/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity" />

                <CheckBox
                    android:id="@+id/Suitability_visibility"
                    style="@style/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visibility" />

            </LinearLayout>

            <LinearLayout
                style="@style/headers"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/SectionTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient_btn"
                    android:text="@string/appearance" />

                <TextView
                    android:id="@+id/marks_Appearance"
                    style="@style/edit_texts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="60dp"
                    android:gravity="end"
                    android:paddingTop="10dp"
                    android:text="@string/marks" />
            </LinearLayout>

            <LinearLayout
                style="@style/linears"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/Appearance_attractive"
                    style="@style/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attractive" />

                <CheckBox
                    android:id="@+id/Appearance_beautiful"
                    style="@style/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/beautiful" />

            </LinearLayout>


            <LinearLayout
                style="@style/headers"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/SectionTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient_btn"
                    android:text="@string/polluted_condition" />

                <TextView
                    android:id="@+id/marks_polluted_condition"
                    style="@style/edit_texts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="60dp"
                    android:gravity="end"
                    android:paddingTop="10dp"
                    android:text="@string/marks" />
            </LinearLayout>

            <LinearLayout
                style="@style/linears"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/polluted_condition_no_accumulation"
                    style="@style/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_accumulation" />

                <CheckBox
                    android:id="@+id/polluted_condition_no_dust"
                    style="@style/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/no_dust" />

                <CheckBox
                    android:id="@+id/polluted_condition_no_smoke"
                    style="@style/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_smoke" />

                <CheckBox
                    android:id="@+id/polluted_condition_no_adverse_effect"
                    style="@style/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/no_adverse_effect" />
            </LinearLayout>

            <LinearLayout
                style="@style/headers"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/SectionTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient_btn"
                    android:text="@string/animals" />

                <TextView
                    android:id="@+id/marks_animals"
                    style="@style/edit_texts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="60dp"
                    android:gravity="end"
                    android:paddingTop="10dp"
                    android:text="@string/marks" />
            </LinearLayout>

            <LinearLayout
                style="@style/linears"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/animals_dominant"
                    style="@style/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dominant" />

                <CheckBox
                    android:id="@+id/animals_other"
                    style="@style/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/other" />

            </LinearLayout>

            <LinearLayout
                style="@style/headers"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/SectionTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient_btn"
                    android:text="@string/drainage" />

                <TextView
                    android:id="@+id/marks_drainage"
                    style="@style/edit_texts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="60dp"
                    android:gravity="end"
                    android:paddingTop="10dp"
                    android:text="@string/marks" />
            </LinearLayout>

            <LinearLayout
                style="@style/linears"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/drainage_suitable"
                    style="@style/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suitable" />

                <CheckBox
                    android:id="@+id/drainage_adequate"
                    style="@style/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/adequate" />

                <CheckBox
                    android:id="@+id/drainage_no_accumulation"
                    style="@style/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_accumulation" />

                <CheckBox
                    android:id="@+id/drainage_safe"
                    style="@style/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/safe" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/packaging_materials_comment"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_comments_here"/>
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
            <LinearLayout
                style="@style/linears"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:id="@+id/location_total_marks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Total Marks"
                    android:layout_gravity="start"
                    android:gravity="start"/>
            </LinearLayout>

            <LinearLayout
                style="@style/linears"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="end">


                <Button
                    android:id="@+id/location_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient_btn"
                    android:text="@string/next"
                    android:layout_gravity="end"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>