<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLinearLayoutLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhiteFrameFill"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".register.RegisterActivity">

    <!-- Register -->
    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="@dimen/activity_vertical_margin"
        android:layout_height="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/top_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"/>

            <TextView
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_started"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_name_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edit_texts"
                    android:id="@+id/text_input_edit_text_name_registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_email_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edit_texts"
                    android:id="@+id/text_input_edit_text_email_registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_password_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edit_texts"
                    android:id="@+id/text_input_edit_text_password_registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textWebPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_confirm_password_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edit_texts"
                    android:id="@+id/text_input_edit_text_confirm_password_registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/re_enter_password"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                style="@style/MainButton"
                android:id="@+id/button_activity_registration"
                android:layout_width="220dp"
                android:layout_height="55dp"
                android:background="@drawable/gradient_btn"
                android:text="@string/register"
                android:onClick="onRegistrationRegisterScreen"
                android:layout_marginTop="64dp"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    style="@style/bottom_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_an_account" />

                <TextView
                    style="@style/bottom_text_link"
                    android:id="@+id/text_view_login_register_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:onClick="backToLoginRegisterScreen" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>